Refactor JigsawBuilder in preparation of a BUILD action